<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/trackNameView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/defaultTrackName"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/copyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/copyLabel"
            app:srcCompat="@drawable/ic_copy" />

        <ImageButton
            android:id="@+id/downloadButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/downloadLabel"
            app:srcCompat="@drawable/ic_cloud_download" />

        <ImageButton
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cancelLabel"
            app:srcCompat="@drawable/ic_cancel" />

        <ImageButton
            android:id="@+id/pauseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pauseLabel"
            app:srcCompat="@drawable/ic_pause" />

        <ImageButton
            android:id="@+id/resumeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/playLabel"
            app:srcCompat="@drawable/ic_play_arrow" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/downloadProgressBar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="50" />

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_error_text"
        android:textColor="@android:color/holo_red_light" />
</LinearLayout>